# orchestra-archive

./: clarion.code-workspace  orchestra.code-workspace
clarion-app/: package-lock.json  package.json
clarion-app/src/: App.tsx  Code.tsx  Data.tsx  State.tsx
clarion-app/src-tauri/: Cargo.toml  tauri.conf.json
clarion-app/src-tauri/icons/: icon.icns
clarion-app/src-tauri/src/: main.rs
clarion-app/src-tauri/src/orchestra/: mod.rs
clarion-app/src/components/: BlockHeader.tsx  ContractFieldLink.tsx  NetworkingProvider.tsx  SocketProvider.tsx
clarion-app/src/components/Chain/: Block.tsx  index.tsx
clarion-app/src/components/Main/: Body.tsx  FtEvent.tsx  FtTable.tsx  Label.tsx  MapEvent.tsx  MapTable.tsx  NftEvent.tsx  NftTable.tsx  Title.tsx  ValueLabel.tsx  VarEvent.tsx  index.ts
clarion-app/src/components/Sidebar/: Contract.tsx  ContractField.tsx  Section.tsx  Wallet.tsx
clarion-app/src/hooks/: useRootSelector.ts  useSocket.ts
clarion-app/src/pages/: StateExplorer.tsx
clarion-app/src/states/: BlocksExplorerState.ts  NetworkingState.ts  StateExplorerState.ts
clarion-app/src/stores/: root.ts
clarion-app/src/types/: clarinet.ts  index.ts
clarion-lib/: Cargo.toml
clarion-lib/src/: lib.rs
clarion-lib/src/actors/: mod.rs
clarion-lib/src/actors/block_archiver/: mod.rs
clarion-lib/src/actors/block_store_manager/: mod.rs
clarion-lib/src/actors/contract_processor/: mod.rs
clarion-lib/src/actors/contract_processor_observer/: mod.rs  update_api_generator.rs  update_state_explorer.rs
clarion-lib/src/actors/contracts_observer/: mod.rs
clarion-lib/src/actors/protocol_observer/: mod.rs
clarion-lib/src/actors/supervisor/: mod.rs
clarion-lib/src/actors/tests/: mod.rs
clarion-lib/src/datastore/: contracts.rs  mod.rs
clarion-lib/src/types/: mod.rs
k8s/: README.md  start-cluster.sh  stop-cluster.sh
k8s/bitcoin-node/: configmap.yaml  service.yaml  statefulset.yaml
k8s/stacks-node/: configmap.yaml  service.yaml  statefulset.yaml
orchestra-app/: package.json
orchestra-app/src/: Code.tsx
orchestra-app/src-tauri/: Cargo.toml
orchestra-app/src-tauri/src/: main.rs
orchestra-app/src-tauri/src/orchestra/: mod.rs
orchestra-app/src/components/Chain/: Block.tsx
orchestra-app/src/components/Main/: MapEvent.tsx  MapTable.tsx  NftEvent.tsx
orchestra-app/src/components/Sidebar/: ContractField.tsx  Section.tsx
orchestra-app/src/hooks/: index.ts  useSocket.ts
orchestra-app/src/pages/: StateExplorer.tsx
orchestra-app/src/states/: NetworkingState.ts
orchestra-app/src/types/: clarinet.ts
orchestra-desktop/: package-lock.json  package.json
orchestra-desktop/src/: App.tsx  Content.tsx
orchestra-desktop/src-tauri/: Cargo.toml  tauri.conf.json
orchestra-desktop/src-tauri/src/: main.rs
orchestra-desktop/src-tauri/src/orchestra/: mod.rs
orchestra-desktop/src/components/: BlockHeader.tsx  Menu.tsx  NetworkingProvider.tsx
orchestra-desktop/src/components/Chain/: Block.tsx  Blocks.tsx  BootChain.tsx  ChainInfo.tsx  ChainView.tsx  DebugControl.tsx  KnownBlock.tsx  NextBlock.tsx  StartControl.tsx  TipBlock.tsx  ToggleControl.tsx  UnknownBlock.tsx  index.tsx
orchestra-desktop/src/components/Main/: Body.tsx  Controls.tsx  FtEvent.tsx  FtTable.tsx  Label.tsx  MapEvent.tsx  MapTable.tsx  NftEvent.tsx  NftTable.tsx  Subtitle.tsx  Title.tsx  ValueLabel.tsx  VarEvent.tsx  index.ts
orchestra-desktop/src/hooks/: index.ts  useInterval.ts  useMap.ts  useRootSelector.ts  useSocket.ts
orchestra-desktop/src/pages/: Code.tsx  LoadingProtocol.tsx  SelectManifest.tsx  StateExplorer.tsx
orchestra-desktop/src/states/: BlocksExplorerState.ts  NetworkingState.ts  StateExplorerState.ts
orchestra-desktop/src/stores/: root.ts
orchestra-desktop/src/styles/: global.ts
orchestra-desktop/src/types/: clarinet.ts  index.ts
orchestra-event-observer/: Cargo.toml
orchestra-event-observer/src/: lib.rs  main.rs
orchestra-event-observer/src/indexer/chains/: bitcoin.rs
orchestra-event-observer/src/observer/: mod.rs
orchestra-event-observer/src/utils/: mod.rs
orchestra-lib/: Cargo.toml
orchestra-lib/src/: lib.rs
orchestra-lib/src/actors/: mod.rs
orchestra-lib/src/actors/block_store_manager/: mod.rs
orchestra-lib/src/actors/contract_processor/: mod.rs
orchestra-lib/src/actors/protocol_observer/: mod.rs  update_api_generator.rs  update_state_explorer.rs
orchestra-lib/src/actors/supervisor/: mod.rs
orchestra-lib/src/actors/tests/: mod.rs
orchestra-lib/src/actors/wallet_processor/: mod.rs
orchestra-lib/src/datastore/: blocks.rs  contracts.rs  mod.rs
orchestra-lib/src/types/: mod.rs
orchestra-types/: Cargo.toml
orchestra-types/src/: rosetta.rs
orchestra-types/src/proto/: messages.proto
stacks-rpc-client/: Cargo.toml
(+6 files in other folders)
