[package]
name = "clarion_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kompact = "0.11.0"
slog = "2"
slog-async = "2"
slog-term = "2"
opentelemetry = "0.16.0"
opentelemetry-jaeger = "0.15.0"
# tokio = { version = "=1.15.0", features = ["full"] }
# clarity_repl = { package = "clarity-repl", path = "../../clarity-repl", features = ["cli"] }
# tiny-hderive = "0.3.0"
# libsecp256k1 = "0.5.0"
serde = "1"
serde_json = "1"
serde_derive = "1"
# bip39 = { version = "1.0.1", default-features = false }
# toml = { version = "0.5.6", features = ["preserve_order"] }
# strum = { version = "0.22", features = ["derive"] }
# hmac = "0.10.1"
# pbkdf2 = { version = "0.7.3", features=["parallel"], default-features = false }
# bs58 = "0.4.0"
# ripemd160 = "0.9.1"
# reqwest = { version = "0.11", features = ["blocking", "json", "rustls"] }
# sha2 = "0.9.3"
# hex = "0.4.3"

[dependencies.clarinet_lib]
package = "clarinet"
path = "../../clarinet/clarinet-cli"
default-features = false

[dependencies.rocksdb]
default-features = false
features = ["lz4"]
