[package]
name = "orchestra-event-streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
stacks_rpc_client = { package = "stacks-rpc-client", path = "../stacks-rpc-client" }
orchestra_types = { package = "orchestra-types", path = "../orchestra-types" }
rocket = { version = "=0.5.0-rc.1", features = ["json"] }
bitcoincore-rpc = "0.14.0"
bitcoincore-rpc-json = "0.14.0"
clarity_repl = { package = "clarity-repl", path = "../../clarity-repl" }
base64 = "0.13.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "=1.15.0", features = ["full"] }
