[package]
name = "orchestra_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2"
slog-async = "2"
slog-term = "2"
opentelemetry = "0.16.0"
opentelemetry-jaeger = "0.15.0"
serde = "1"
serde_json = "1"
serde_derive = "1"

[dependencies.kompact]
version = "0.11.0"
# features = ["release_max_level_info"]

[dependencies.clarinet_lib]
package = "clarinet"
path = "../../clarinet/clarinet-cli"
default-features = false

[dependencies.rocksdb]
default-features = false
features = ["lz4"]
