[package]
name = "orchestra_lib"
authors = ["Ludo Galabru <ludo@hiro.so>"]
license = "GPL-3.0"
repository = "https://github.com/hirosystems/orchestra"
homepage = "https://github.com/hirosystems/orchestra"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2"
slog-async = "2"
slog-term = "2"
opentelemetry = "0.16.0"
opentelemetry-jaeger = "0.15.0"
serde = "1"
serde_json = "1"
serde_derive = "1"
ripemd = "0.1.1"

[dependencies.kompact]
version = "0.11.0"
# features = ["release_max_level_info"]

[dependencies.clarinet_lib]
package = "clarinet"
path = "../../clarinet/clarinet-cli"
default-features = false

[dependencies.rocksdb]
version = "0.18.0"
default-features = false
features = ["lz4", "snappy"]
