[package]
name = "Orchestra"
version = "0.1.1"
description = "Development Studio designed for the Stacks blockchain"
authors = ["Ludo Galabru <ludo@hiro.so>"]
license = "GPL-3.0"
repository = "https://github.com/hirosystems/orchestra"
homepage = "https://github.com/hirosystems/orchestra"
default-run = "Orchestra"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { path = "../../../tauri/tauri/core/tauri", features = ["api-all", "updater"] }
orchestra_lib = { path = "../../orchestra-lib/" }
tungstenite = "0.17.2"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
# anyhow = "1.0"
# crossbeam-channel = "0.5"

# [dependencies.electrs]
# path = "../../../electrs"
# git = "https://github.com/hirosystems/electrs"
# default-features = false

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
